--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,12 @@
 NEWS file for libxml2
 
+v2.11.9: Jul 24 2024
+
+### Security
+
+- [CVE-2024-40896] Fix XXE protection in downstream code
+
+
 v2.11.8: May 13 2024
 
 ### Security
